--- a/Projekt Dalastubben/index.html
+++ b/Projekt Dalastubben/index.html
@@ -16,9 +16,9 @@
 <body>
     <header>
 
-        <img class="d-block mx-auto logo" src="img/dalastubben-logo.png" alt="dalastubben">
+        <img class="d-flex mx-auto logo" src="img/dalastubben-logo.png" alt="dalastubben">
 
-        <nav class="navbar navbar-expand navbar-transparent">
+        <nav class="navbar navbar-expand">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item m-1">
                     <button class="btn nav-btn px-2">Home</button>
