--- a/Projekt Dalastubben/index.html
+++ b/Projekt Dalastubben/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Stubbfräsning & Trädfällning i Värmland, Dalarna, m.fl. | Dalastubben</title>
+    <title>Stubbfräsning & Trädfällning i Dalarna, Värmland, m.fl. | Dalastubben</title>
     <meta name="description" content="Dalastubben erbjuder professionell stubbfräsning, buskfräsning, trädfällning, bortforsling i Värmland, Dalarna, Västmanland, Örebro och Stockholm. Snabbt, effektivt och säkert – kontakta oss för en gratis offert idag!">
     <meta name="keywords" content="stubbfräsning, buskfräsning, trädfällning,bortforsling, Värmland, Dalarna, Västmanland, Örebro, Stockholm, företag, stubb, träd, trädgård, fastighet, offert, tjänster">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -21,13 +21,13 @@
         <nav class="navbar navbar-expand">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item m-1">
-                    <button class="btn nav-btn px-2">Home</button>
+                    <button class="btn nav-btn px-2">Hem</button>
                 </li>
                 <li class="nav-item m-1">
-                    <button class="btn nav-btn px-2">About</button>
+                    <button class="btn nav-btn px-2">Om oss</button>
                 </li>
                 <li class="nav-item m-1">
-                    <button class="btn nav-btn px-2">Contact</button>
+                    <button class="btn nav-btn px-2">Kontakt</button>
                 </li>
                 <li class="nav-item m-1">
                     <button class="btn nav-btn px-2">FAQ</button>
