--- a/Projekt Dalastubben/index.html
+++ b/Projekt Dalastubben/index.html
@@ -16,21 +16,38 @@
 <body>
     <header>
 
-        <img class="d-flex mx-auto logo" src="img/dalastubben-logo.png" alt="dalastubben">
+        <img class="d-flex mx-auto logo" src="img/dalastubben-logo.png" alt="Dalastubben">
 
         <nav class="navbar navbar-expand">
             <ul class="navbar-nav mx-auto">
                 <li class="nav-item m-1">
-                    <button class="btn nav-btn px-2">Hem</button>
+                    <button class="btn nav-btn">Hem</button>
                 </li>
                 <li class="nav-item m-1">
-                    <button class="btn nav-btn px-2">Om oss</button>
+                    <button class="btn nav-btn">Om oss</button>
                 </li>
                 <li class="nav-item m-1">
-                    <button class="btn nav-btn px-2">Kontakt</button>
+                    <button class="btn nav-btn">Kontakt</button>
                 </li>
                 <li class="nav-item m-1">
-                    <button class="btn nav-btn px-2">FAQ</button>
+                    <button class="btn nav-btn">FAQ</button>
+                </li>
+            </ul>
+        </nav>
+        <!-- Hidden nav for scroll -->
+        <nav class="navbar navbar-expand d-none hidden-nav">
+            <ul class="navbar-nav mx-auto">
+                <li class="nav-item m-1">
+                    <button class="btn nav-btn hidden-btn"></button>
+                </li>
+                <li class="nav-item m-1">
+                    <button class="btn nav-btn hidden-btn"></button>
+                </li>
+                <li class="nav-item m-1">
+                    <button class="btn nav-btn hidden-btn"></button>
+                </li>
+                <li class="nav-item m-1">
+                    <button class="btn nav-btn hidden-btn"></button>
                 </li>
             </ul>
         </nav>
@@ -44,7 +61,9 @@
     <footer class="sticky-bottom">
         <div class="row p-0 m-0">
             <div class="col">
-                <p class="text-center">© 2023 Dalastubben</p>
+                <p class="text-center">
+                    © 2023 Dalastubben
+                </p>
             </div>
         </div>
     </footer>
