--- a/Projekt Dalastubben/index.html
+++ b/Projekt Dalastubben/index.html
@@ -55,6 +55,56 @@
     </header>
     
     <main class="container">
+
+        <!-- Home Container-->
+        <div class="home-container div-container scroll-container d-none">
+            <section class="card m-3">
+                <article class="card-body scroll-item">
+                    <img src="img/Skärmbild 2023-03-27 142147.png" alt="Stubbfräsning" class="card-img-top">
+                    <h1 class="card-title mt-3">Stubbfräsning</h1>
+                    <p class="card-text">
+                        Stubbfräsning hanterar effektivt besvärliga stubbar för jämnare gräsmattor och enklare robotgräsklipparinstallation. Vår tjänst ersätter tidskrävande grävning och sparar energi. Vi mal ner stubben, skyddar gräsmattan och låter gräset återhämta sig snabbt. Hålet fylls igen och packas noggrant för en säker och estetiskt tilltalande trädgård.
+                    </p>
+                </article>
+            </section>
+            <section class="card m-3">
+                <article class="card-body scroll-item">
+                    <img src="img/SC362_Action_01.jpg" alt="Buskfräsning" class="card-img-top">
+                    <h1 class="card-title mt-3">Buskfräsning</h1>
+                    <p class="card-text">
+                        Buskfräsning är en effektiv metod för att snabbt avlägsna oönskade buskar och häckar, skapa öppet utrymme och förändra trädgårdens utseende. Vi mal ner buskar och rötter med en kraftfull buskfräs, förhindrar återväxt och förbereder området för framtida trädgårdsprojekt, samtidigt som vi tar hänsyn till omgivande växter och träd. Vår buskfräsningstjänst förvandlar er trädgård till en attraktiv och funktionell plats på ett enkelt och effektivt sätt.
+                    </p>
+                </article>
+            </section>
+            <section class="card m-3">
+                <article class="card-body scroll-item">
+                    <img src="img/forest-g609f0d95e_1920.jpg" alt="Trädfällning" class="card-img-top">
+                    <h1 class="card-title mt-3">Trädfällning</h1>
+                    <p class="card-text">
+                        Trädfällning kan vara nödvändigt av flera skäl, såsom säkerhet, trädets hälsa eller för att skapa mer utrymme. Vi hanterar komplexa och riskfyllda uppgifter med erfaren personal, säkerhetsrutiner och rätt utrustning. Efter trädfällning erbjuder vi även bortforsling och stubbfräsning för att återställa området på ett säkert och effektivt sätt.
+                    </p>
+                </article>
+            </section>
+        </div>
+
+        <!-- About Container -->
+        <div class="about-container div-container d-none">
+            <h1 class="about-title text-center">Om oss</h1>
+            <p class="about-text">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque laudantium eius rerum, reiciendis voluptas quibusdam provident sint, qui ex, beatae assumenda error facilis vero fuga impedit quae dolorem blanditiis magni? Iusto nisi minima praesentium quis sint pariatur, recusandae architecto in omnis. Dignissimos repellendus quidem at cumque, ratione doloribus in dolorem illum nostrum. Recusandae repellendus obcaecati voluptatibus itaque quo! Enim, laboriosam?
+            </p>
+        </div>
+
+        <!-- Contact Container -->
+        <div class="contact-container div-container d-none">
+
+        </div>
+
+        <!-- FAQ Container -->
+        <div class="faq-container div-container d-none">
+
+        </div>
+
     </main>
 
     <footer class="sticky-bottom">
@@ -68,7 +118,7 @@
     </footer>
 
     <!-- Egen JavaScript -->
-    <script src="script.js"></script>
+    <script src="script1.js"></script>
     <!-- Bootstrap 5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </body>
