--- a/Projekt Dalastubben/index.html
+++ b/Projekt Dalastubben/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <!-- Egen CSS -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-min.css">
 </head>
 <body>
 <div class="scroll-container">
@@ -44,7 +44,7 @@
         <!-- Home Container-->
         <div class="home-container container">
             <section class="card scroll-item">
-                <article class="card-body center-container fadeFromLeft">
+                <article class="card-body center-container bounceFromLeft">
                     <img src="img/Skärmbild 2023-03-27 142147.png" alt="Stubbfräsning" class="card-img-top rounded">
                     <h1 class="card-title mt-3">Stubbfräsning</h1>
                     <p class="card-text">
@@ -62,7 +62,7 @@
                 </article>
             </section>
             <section class="card scroll-item">
-                <article class="card-body center-container fadeFromRight">
+                <article class="card-body center-container bounceFromRight">
                     <img src="img/forest-g609f0d95e_1920.jpg" alt="Trädfällning" class="card-img-top rounded">
                     <h1 class="card-title mt-3">Trädfällning</h1>
                     <p class="card-text">
@@ -112,22 +112,10 @@
         </div>
 
     </main>
-<!--
-    <footer class="bottom-fixed">
-        <div class="row p-0 m-0">
-            <div class="col">
-                <p class="text-center">
-                    © 2023 Dalastubben
-                </p>
-            </div>
-        </div>
-    </footer> 
--->
-    
 </div>
 
     <!-- Egen JavaScript -->
-    <script src="newscript.js"></script>
+    <script src="script.js"></script>
     <!-- Bootstrap 5 -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/js/bootstrap.bundle.min.js" integrity="sha384-qKXV1j0HvMUeCBQ+QVp7JcfGl760yU08IQ+GpUo5hlbpg51QRiuqHAJz8+BrxE/N" crossorigin="anonymous"></script>
 </body>
