--- a/Projekt Dalastubben/index.html
+++ b/Projekt Dalastubben/index.html
@@ -11,7 +11,7 @@
     <!-- Bootstrap 5 -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-aFq/bzH65dt+w6FI2ooMVUpc+21e0SRygnTpmBvdBgSdnuTN7QbdgL+OapgHtvPp" crossorigin="anonymous">
     <!-- Egen CSS -->
-    <link rel="stylesheet" href="style-min.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 <div class="scroll-container">
@@ -108,7 +108,109 @@
 
         <!-- FAQ Container -->
         <div class="faq-container container scroll-item d-none">
-
+            <div class="container mt-5">
+                <h1 class="text-center mb-4">Frågor och Svar</h1>
+                <div class="accordion" id="faqAccordion">
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingOne">
+                      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit?
+                      </button>
+                    </h2>
+                    <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
+                      <div class="accordion-body">
+                        <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo repellat voluptas pariatur. Voluptatum in alias, consectetur aut perferendis accusamus ad doloremque animi, numquam nulla nisi vero quaerat repellendus harum ea.
+                        Sapiente laboriosam magni temporibus molestias architecto dignissimos aliquid laudantium delectus dolores? A eum repudiandae, voluptates quod nemo repellendus, deserunt itaque quaerat hic dicta esse totam? Nemo reiciendis maxime nihil laudantium?
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingTwo">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        Nemo reiciendis maxime nihil laudantium?
+                      </button>
+                    </h2>
+                    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
+                      <div class="accordion-body">
+                        <p>
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Praesentium unde voluptas impedit vero blanditiis qui incidunt officiis omnis quos odio in soluta enim exercitationem, neque ea illo, numquam quo dolor!
+                        Dolore possimus maxime debitis, fugit ut ducimus nobis ab cum natus saepe architecto modi maiores velit vel doloremque eius eaque quos odio aliquid molestiae harum. Unde debitis dicta consectetur fugit!
+                        Consequatur provident ipsa libero ad voluptas iste cumque, vitae, eum eius quas illo? Aut suscipit iure eius nam adipisci minima facere recusandae dolor perspiciatis debitis, iusto laborum, expedita sit praesentium.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingThree">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        Lorem ipsum dolor sit amet consectetur?
+                      </button>
+                    </h2>
+                    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqAccordion">
+                      <div class="accordion-body">
+                        <p>
+                        Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit voluptates eius at voluptatibus reiciendis doloribus, nam consequuntur nostrum sunt fuga adipisci ab, amet repudiandae facilis itaque minima repellendus, asperiores molestias?
+                        Quas sint corrupti voluptatum harum nisi architecto eligendi repellendus dignissimos pariatur natus, at eos alias doloribus fugiat nam delectus sequi adipisci aspernatur laudantium odit cum? Ut cum debitis ullam consectetur.
+                        Eaque magnam iusto necessitatibus sapiente sit ut molestias dolorum excepturi sint expedita quam ea nisi quas, unde aperiam enim in labore modi atque temporibus. Ad ipsa corrupti sequi provident minima.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFour">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                        Ut cum debitis ullam consectetur?
+                      </button>
+                    </h2>
+                    <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#faqAccordion">
+                      <div class="accordion-body">
+                        <p>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi ex consequuntur corrupti voluptatem impedit! Temporibus, illo qui, delectus explicabo tenetur, minus vero incidunt neque sequi itaque porro deserunt ipsum voluptatum.
+                        Rem quibusdam hic illum expedita enim delectus, consectetur recusandae molestiae distinctio provident nostrum voluptates impedit voluptate pariatur ducimus excepturi. Explicabo alias laborum consequuntur eaque odio, recusandae voluptates! Corporis, at ipsum.
+                        Obcaecati, vel sunt! Corporis maiores dolores voluptate debitis excepturi non? Id quasi modi facere. Libero, recusandae quis quidem repellendus maxime, illum magnam reprehenderit expedita assumenda ducimus, ad fuga enim minus?
+                        Repudiandae quo aliquam totam consequuntur iusto fuga at dolorum optio veritatis! Suscipit obcaecati labore corporis nobis! Ipsa nesciunt autem laudantium, dolorum aspernatur dicta quas corrupti quo. Ullam doloribus ex voluptas?
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingFive">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                        Ullam doloribus ex voluptas?
+                      </button>
+                    </h2>
+                    <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#faqAccordion">
+                      <div class="accordion-body">
+                        <p>
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde iste assumenda quas aperiam repellendus deleniti quia possimus non repudiandae qui fuga aut, ipsa ea odit doloremque pariatur perspiciatis corporis soluta?
+                        Libero molestias eos debitis voluptatem repudiandae ad ipsam, doloribus dolor explicabo iste? Nisi asperiores quae assumenda eum officia, enim incidunt veritatis excepturi quas quidem, tempore voluptate dolor accusamus explicabo. Pariatur!
+                        Culpa ipsum incidunt mollitia assumenda a deleniti ab neque ut laboriosam iure architecto sed non iusto ipsa perspiciatis recusandae expedita vero qui, ratione dicta laudantium laborum quod veritatis exercitationem. Repellendus!
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="accordion-item">
+                    <h2 class="accordion-header" id="headingSix">
+                      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                        Sit, recusandae?
+                      </button>
+                    </h2>
+                    <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#faqAccordion">
+                      <div class="accordion-body">
+                        <p>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil amet quaerat tempore. Temporibus, cumque totam est dicta voluptatum iste accusantium aliquid officiis, sapiente repellat ex molestias porro. Eos, voluptatibus esse.
+                        Repellendus perferendis officiis accusamus delectus velit debitis itaque esse laboriosam, hic et ipsam laudantium similique quis omnis illo labore suscipit aperiam consectetur inventore facere asperiores id, repellat minus! Sit, recusandae?
+                        Autem voluptas, id molestiae nulla vero quo in laboriosam quis fugit optio aliquid placeat ullam quos earum maiores minima nam qui. Deserunt ipsam atque cum odio in enim rerum eius?
+                        Veritatis deleniti atque nostrum facere exercitationem labore, totam ea dicta officia sed nihil, fuga quidem consequatur ipsa et ducimus similique iusto eveniet, necessitatibus mollitia doloremque. Ipsam accusantium voluptatibus explicabo aliquam.
+                        Iusto minima voluptatem debitis ducimus est eius aliquid quas accusantium sequi? Autem saepe suscipit repellat fugit voluptate nobis molestiae obcaecati officiis vel, repudiandae consequatur accusantium asperiores incidunt architecto beatae iste.
+                        </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
         </div>
 
     </main>
