--- a/Projekt Dalastubben/index.html
+++ b/Projekt Dalastubben/index.html
@@ -16,7 +16,7 @@
 <body>
 <div class="scroll-container">
 
-    <header class="scroll-item">
+      <header class="scroll-item">
 
         <img class="d-flex mx-auto logo" src="img/dalastubben-logo.png" alt="Dalastubben">
 
@@ -37,16 +37,16 @@
             </ul>
         </nav>
 
-    </header>
+      </header>
     
-    <main class="container">
+      <main>
 
         <!-- Home Container-->
-        <div class="home-container container">
+        <div class="home-container container d-none">
             <section class="card scroll-item">
                 <article class="card-body center-container bounceFromLeft">
-                    <img src="img/Skärmbild 2023-03-27 142147.png" alt="Stubbfräsning" class="card-img-top rounded">
-                    <h1 class="card-title mt-3">Stubbfräsning</h1>
+                    <img src="img/Skärmbild-2023-03-27-142147.png" alt="Stubbfräsning" class="card-img-top rounded">
+                    <h1 class="card-title mt-3">STUBBFRÄSNING</h1>
                     <p class="card-text">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non excepturi autem cupiditate asperiores facere aliquam esse eos eius quidem qui at sint nulla quos commodi alias illum, iure deleniti veritatis?
                     </p>
@@ -55,7 +55,7 @@
             <section class="card scroll-item">
                 <article class="card-body center-container fadeIn">
                     <img src="img/SC362_Action_01.jpg" alt="Buskfräsning" class="card-img-top rounded">
-                    <h1 class="card-title mt-3">Buskfräsning</h1>
+                    <h1 class="card-title mt-3">BUSKFRÄSNING</h1>
                     <p class="card-text">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium enim perferendis quo in placeat veritatis deserunt culpa, reiciendis harum unde adipisci, recusandae aliquid iure tempora voluptas ipsum optio voluptatum sint?
                     </p>
@@ -64,9 +64,9 @@
             <section class="card scroll-item">
                 <article class="card-body center-container bounceFromRight">
                     <img src="img/forest-g609f0d95e_1920.jpg" alt="Trädfällning" class="card-img-top rounded">
-                    <h1 class="card-title mt-3">Trädfällning</h1>
+                    <h1 class="card-title mt-3">TRÄDFÄLLNING</h1>
                     <p class="card-text">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora aspernatur officia aliquid ea quod asperiores cupiditate nostrum enim maxime, veniam error accusamus sed eos iure deleniti doloremque, corrupti eveniet eius.
+                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora aspernatur officia aliquid ea quod asperiores cupiditate nostrum enim maxime, veniam error accusamus sed eos iure deleniti doloremque.
                     </p>
                 </article>
             </section>
@@ -153,7 +153,6 @@
                         <p>
                         Lorem ipsum dolor sit, amet consectetur adipisicing elit. Velit voluptates eius at voluptatibus reiciendis doloribus, nam consequuntur nostrum sunt fuga adipisci ab, amet repudiandae facilis itaque minima repellendus, asperiores molestias?
                         Quas sint corrupti voluptatum harum nisi architecto eligendi repellendus dignissimos pariatur natus, at eos alias doloribus fugiat nam delectus sequi adipisci aspernatur laudantium odit cum? Ut cum debitis ullam consectetur.
-                        Eaque magnam iusto necessitatibus sapiente sit ut molestias dolorum excepturi sint expedita quam ea nisi quas, unde aperiam enim in labore modi atque temporibus. Ad ipsa corrupti sequi provident minima.
                         </p>
                       </div>
                     </div>
@@ -169,8 +168,6 @@
                         <p>
                         Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quasi ex consequuntur corrupti voluptatem impedit! Temporibus, illo qui, delectus explicabo tenetur, minus vero incidunt neque sequi itaque porro deserunt ipsum voluptatum.
                         Rem quibusdam hic illum expedita enim delectus, consectetur recusandae molestiae distinctio provident nostrum voluptates impedit voluptate pariatur ducimus excepturi. Explicabo alias laborum consequuntur eaque odio, recusandae voluptates! Corporis, at ipsum.
-                        Obcaecati, vel sunt! Corporis maiores dolores voluptate debitis excepturi non? Id quasi modi facere. Libero, recusandae quis quidem repellendus maxime, illum magnam reprehenderit expedita assumenda ducimus, ad fuga enim minus?
-                        Repudiandae quo aliquam totam consequuntur iusto fuga at dolorum optio veritatis! Suscipit obcaecati labore corporis nobis! Ipsa nesciunt autem laudantium, dolorum aspernatur dicta quas corrupti quo. Ullam doloribus ex voluptas?
                         </p>
                       </div>
                     </div>
@@ -186,7 +183,6 @@
                         <p>
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde iste assumenda quas aperiam repellendus deleniti quia possimus non repudiandae qui fuga aut, ipsa ea odit doloremque pariatur perspiciatis corporis soluta?
                         Libero molestias eos debitis voluptatem repudiandae ad ipsam, doloribus dolor explicabo iste? Nisi asperiores quae assumenda eum officia, enim incidunt veritatis excepturi quas quidem, tempore voluptate dolor accusamus explicabo. Pariatur!
-                        Culpa ipsum incidunt mollitia assumenda a deleniti ab neque ut laboriosam iure architecto sed non iusto ipsa perspiciatis recusandae expedita vero qui, ratione dicta laudantium laborum quod veritatis exercitationem. Repellendus!
                         </p>
                       </div>
                     </div>
@@ -202,9 +198,6 @@
                         <p>
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nihil amet quaerat tempore. Temporibus, cumque totam est dicta voluptatum iste accusantium aliquid officiis, sapiente repellat ex molestias porro. Eos, voluptatibus esse.
                         Repellendus perferendis officiis accusamus delectus velit debitis itaque esse laboriosam, hic et ipsam laudantium similique quis omnis illo labore suscipit aperiam consectetur inventore facere asperiores id, repellat minus! Sit, recusandae?
-                        Autem voluptas, id molestiae nulla vero quo in laboriosam quis fugit optio aliquid placeat ullam quos earum maiores minima nam qui. Deserunt ipsam atque cum odio in enim rerum eius?
-                        Veritatis deleniti atque nostrum facere exercitationem labore, totam ea dicta officia sed nihil, fuga quidem consequatur ipsa et ducimus similique iusto eveniet, necessitatibus mollitia doloremque. Ipsam accusantium voluptatibus explicabo aliquam.
-                        Iusto minima voluptatem debitis ducimus est eius aliquid quas accusantium sequi? Autem saepe suscipit repellat fugit voluptate nobis molestiae obcaecati officiis vel, repudiandae consequatur accusantium asperiores incidunt architecto beatae iste.
                         </p>
                       </div>
                     </div>
@@ -212,10 +205,9 @@
                 </div>
               </div>
         </div>
+      </main>
 
-    </main>
 </div>
-
     <!-- Egen JavaScript -->
     <script src="script.js"></script>
     <!-- Bootstrap 5 -->
