--- a/Projekt Dalastubben/index.html
+++ b/Projekt Dalastubben/index.html
@@ -16,7 +16,7 @@
 <body>
 <div class="scroll-container">
 
-      <header class="scroll-item">
+      <header class="scroll-item d-flex justify-content-center align-items-center flex-column">
 
         <img class="d-flex mx-auto logo" src="img/dalastubben-logo.png" alt="Dalastubben">
 
@@ -43,29 +43,29 @@
 
         <!-- Home Container-->
         <div class="home-container container d-none">
-            <section class="card scroll-item">
-                <article class="card-body center-container bounceFromLeft">
+            <section class="card border border-0 scroll-item">
+                <article class="card-body center-container d-flex justify-content-center align-items-center flex-column bounceFromLeft">
                     <img src="img/Skärmbild-2023-03-27-142147.png" alt="Stubbfräsning" class="card-img-top rounded">
-                    <h1 class="card-title mt-3">STUBBFRÄSNING</h1>
-                    <p class="card-text">
+                    <h2 class="card-title text-center mt-3">STUBBFRÄSNING</h2>
+                    <p class="card-text text-center">
                         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non excepturi autem cupiditate asperiores facere aliquam esse eos eius quidem qui at sint nulla quos commodi alias illum, iure deleniti veritatis?
                     </p>
                 </article>
             </section>
-            <section class="card scroll-item">
-                <article class="card-body center-container fadeIn">
+            <section class="card border border-0 scroll-item">
+                <article class="card-body center-container d-flex justify-content-center align-items-center flex-column fadeIn">
                     <img src="img/SC362_Action_01.jpg" alt="Buskfräsning" class="card-img-top rounded">
-                    <h1 class="card-title mt-3">BUSKFRÄSNING</h1>
-                    <p class="card-text">
+                    <h2 class="card-title text-center mt-3">BUSKFRÄSNING</h2>
+                    <p class="card-text text-center">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium enim perferendis quo in placeat veritatis deserunt culpa, reiciendis harum unde adipisci, recusandae aliquid iure tempora voluptas ipsum optio voluptatum sint?
                     </p>
                 </article>
             </section>
-            <section class="card scroll-item">
-                <article class="card-body center-container bounceFromRight">
+            <section class="card border border-0 scroll-item">
+                <article class="card-body center-container d-flex justify-content-center align-items-center flex-column bounceFromRight">
                     <img src="img/forest-g609f0d95e_1920.jpg" alt="Trädfällning" class="card-img-top rounded">
-                    <h1 class="card-title mt-3">TRÄDFÄLLNING</h1>
-                    <p class="card-text">
+                    <h2 class="card-title text-center mt-3">TRÄDFÄLLNING</h2>
+                    <p class="card-text text-center">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora aspernatur officia aliquid ea quod asperiores cupiditate nostrum enim maxime, veniam error accusamus sed eos iure deleniti doloremque.
                     </p>
                 </article>
@@ -73,10 +73,10 @@
         </div>
 
         <!-- About Container -->
-        <div class="about-container container scroll-item d-none">
-            <section class="card m-3">
-                <article class="card-body center-container">
-                    <h1 class="about-title mt-3">Om oss</h1>
+        <div class="about-container container scroll-item d-flex justify-content-center align-items-center flex-column d-none">
+            <section class="card border border-0 m-3">
+                <article class="card-body center-container d-flex justify-content-center align-items-center flex-column">
+                    <h2 class="about-title mt-3">OM OSS</h2>
                     <p class="about-text">
                         Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque laudantium eius rerum, reiciendis voluptas quibusdam provident sint, qui ex, beatae assumenda error facilis vero fuga impedit quae dolorem blanditiis magni? Iusto nisi minima praesentium quis sint pariatur, recusandae architecto in omnis. Dignissimos repellendus quidem at cumque, ratione doloribus in dolorem illum nostrum. Recusandae repellendus obcaecati voluptatibus itaque quo! Enim, laboriosam?
                     </p>
@@ -85,7 +85,7 @@
         </div>
 
         <!-- Contact Container -->
-        <div class="contact-container container scroll-item d-none">
+        <div class="contact-container container scroll-item d-flex justify-content-center align-items-center flex-column d-none">
             <div class="container center-form">
                 <form>
                   <div class="form-group">
@@ -107,16 +107,16 @@
         </div>
 
         <!-- FAQ Container -->
-        <div class="faq-container container scroll-item d-none">
+        <div class="faq-container container scroll-item d-flex justify-content-center align-items-center flex-column d-none">
             <div class="container mt-5">
-                <h1 class="text-center mb-4">Frågor och Svar</h1>
+                <h2 class="text-center mb-4">Frågor och Svar</h2>
                 <div class="accordion" id="faqAccordion">
                   <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingOne">
+                    <h3 class="accordion-header" id="headingOne">
                       <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit?
                       </button>
-                    </h2>
+                    </h3>
                     <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#faqAccordion">
                       <div class="accordion-body">
                         <p>
@@ -127,11 +127,11 @@
                     </div>
                   </div>
                   <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingTwo">
+                    <h3 class="accordion-header" id="headingTwo">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                         Nemo reiciendis maxime nihil laudantium?
                       </button>
-                    </h2>
+                    </h3>
                     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#faqAccordion">
                       <div class="accordion-body">
                         <p>
@@ -143,11 +143,11 @@
                     </div>
                   </div>
                   <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingThree">
+                    <h3 class="accordion-header" id="headingThree">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                         Lorem ipsum dolor sit amet consectetur?
                       </button>
-                    </h2>
+                    </h3>
                     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#faqAccordion">
                       <div class="accordion-body">
                         <p>
@@ -158,11 +158,11 @@
                     </div>
                   </div>
                   <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingFour">
+                    <h3 class="accordion-header" id="headingFour">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                         Ut cum debitis ullam consectetur?
                       </button>
-                    </h2>
+                    </h3>
                     <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#faqAccordion">
                       <div class="accordion-body">
                         <p>
@@ -173,11 +173,11 @@
                     </div>
                   </div>
                   <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingFive">
+                    <h3 class="accordion-header" id="headingFive">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                         Ullam doloribus ex voluptas?
                       </button>
-                    </h2>
+                    </h3>
                     <div id="collapseFive" class="accordion-collapse collapse" aria-labelledby="headingFive" data-bs-parent="#faqAccordion">
                       <div class="accordion-body">
                         <p>
@@ -188,11 +188,11 @@
                     </div>
                   </div>
                   <div class="accordion-item">
-                    <h2 class="accordion-header" id="headingSix">
+                    <h3 class="accordion-header" id="headingSix">
                       <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
                         Sit, recusandae?
                       </button>
-                    </h2>
+                    </h3>
                     <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#faqAccordion">
                       <div class="accordion-body">
                         <p>
