--- a/Projekt Dalastubben/index.html
+++ b/Projekt Dalastubben/index.html
@@ -42,7 +42,7 @@
         <section class="card border border-0 scroll-item">
           <article class="card-body d-flex justify-content-center align-items-center flex-column bounceFromLeft">
             <img src="img/Skärmbild-2023-03-27-142147.png" alt="Stubbfräsning" class="card-img-top rounded">
-              <h2 class="card-title mt-3"><strong>STUBBFRÄSNING</strong></h2>
+              <h2 class="card-title mt-3">STUBBFRÄSNING</h2>
                 <p class="card-text text-center">
                   Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non excepturi autem cupiditate asperiores facere aliquam esse eos eius quidem qui at sint nulla quos commodi alias illum, iure deleniti veritatis?
                 </p>
@@ -51,7 +51,7 @@
         <section class="card border border-0 scroll-item">
           <article class="card-body d-flex justify-content-center align-items-center flex-column fadeIn">
             <img src="img/SC362_Action_01.jpg" alt="Buskfräsning" class="card-img-top rounded">
-              <h2 class="card-title mt-3"><strong>BUSKFRÄSNING</strong></h2>
+              <h2 class="card-title mt-3">BUSKFRÄSNING</h2>
                 <p class="card-text text-center">
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laudantium enim perferendis quo in placeat veritatis deserunt culpa, reiciendis harum unde adipisci, recusandae aliquid iure tempora voluptas ipsum optio voluptatum sint?
                 </p>
@@ -59,8 +59,9 @@
         </section>
         <section class="card border border-0 scroll-item">
           <article class="card-body d-flex justify-content-center align-items-center flex-column bounceFromRight">
+            <!-- Image from Pixabay -->
             <img src="img/forest-g609f0d95e_1920.jpg" alt="Trädfällning" class="card-img-top rounded">
-              <h2 class="card-title mt-3"><strong>TRÄDFÄLLNING</strong></h2>
+              <h2 class="card-title mt-3">TRÄDFÄLLNING</h2>
                 <p class="card-text text-center">
                   Lorem ipsum dolor, sit amet consectetur adipisicing elit. Tempora aspernatur officia aliquid ea quod asperiores cupiditate nostrum enim maxime, veniam error accusamus sed eos iure deleniti doloremque.
                 </p>
@@ -72,7 +73,7 @@
       <div class="about-container container scroll-item d-flex justify-content-center align-items-center flex-column d-none">
         <section class="card border border-0 m-3">
           <article class="card-body d-flex justify-content-center align-items-center flex-column">
-            <h2 class="about-title mt-3"><strong>OM OSS</strong></h2>
+            <h2 class="about-title mt-3">OM OSS</h2>
               <p class="about-text">
                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque laudantium eius rerum, reiciendis voluptas quibusdam provident sint, qui ex, beatae assumenda error facilis vero fuga impedit quae dolorem blanditiis magni? Iusto nisi minima praesentium quis sint pariatur, recusandae architecto in omnis. Dignissimos repellendus quidem at cumque, ratione doloribus in dolorem illum nostrum. Recusandae repellendus obcaecati voluptatibus itaque quo! Enim, laboriosam?
               </p>
@@ -104,7 +105,7 @@
       <!-- FAQ Container -->
       <div class="faq-container container scroll-item d-flex justify-content-center align-items-center flex-column d-none">
         <div class="container mt-5">
-          <h2 class="text-center mb-4"><strong>Frågor och Svar</strong></h2>
+          <h2 class="faq-title text-center mb-4">Frågor och Svar</h2>
             <div class="accordion" id="faqAccordion">
               <div class="accordion-item">
                 <h3 class="accordion-header" id="headingOne">
